--- a/api-service/src/main/resources/application.properties.example
+++ b/api-service/src/main/resources/application.properties.example
@@ -1,6 +1,7 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/notification_db
-spring.datasource.username=postgres
-spring.datasource.password=1234
+spring.datasource.url=jdbc:postgresql://localhost:5432/yourdb
+spring.datasource.username=your_user
+spring.datasource.password=your_password
+
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=none
