--- a/api-service/pom.xml
+++ b/api-service/pom.xml
@@ -54,9 +54,11 @@
 			<artifactId>flyway-core</artifactId>
 			<version>9.22.3</version>
 		</dependency>
-
-
-
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-csv</artifactId>
+			<version>1.9.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
