ci: add Flyway migration step to CI pipeline

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,3 +28,7 @@ jobs:
 
       - name: Run tests
         run: mvn test
+
+      - name: Run Flyway migrations with Maven
+        run: mvn flyway:migrate
+
