--- a/api-service/src/main/resources/application.properties.example
+++ b/api-service/src/main/resources/application.properties.example
@@ -8,3 +8,8 @@ spring.jpa.hibernate.ddl-auto=none
 
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
+
+kafka.bootstrap-servers=localhost:9092
+
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
