--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,10 @@ services:
       - zookeeper
     ports:
       - "9092:9092"
+  redis:
+    image: redis:latest
+    ports:
+      - "6379:6379"
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
