--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,6 +41,13 @@ jobs:
           java-version: '17'
           cache: maven
 
+      - name: Run Kafka KRaft Broker
+        uses: spicyparrot/kafka-kraft-action@v1.1.0
+        with:
+          kafka-version: "3.6.1"           # Укажите нужную версию Kafka
+          kafka-topics: "notifications,1"  # Создаем топик 'notifications' с 1 разделом
+        id: kafkaAction
+
       - name: Build with Maven
         run: mvn clean install
 
