--- a/worker/pom.xml
+++ b/worker/pom.xml
@@ -41,6 +41,13 @@
 			<artifactId>postgresql</artifactId>
 			<version>42.6.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.kafka</groupId>
+			<artifactId>spring-kafka-test</artifactId>
+			<version>2.9.7</version>
+			<scope>test</scope>
+		</dependency>
+
 
 	</dependencies>
 
