--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,22 @@
+name: CI Pipeline
+
+env:
+  KAFKA_BOOTSTRAP_SERVERS: kafka:9092
+  REDIS_HOST: redis
+  REDIS_PORT: 6379
+
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
+
 jobs:
   build:
     runs-on: ubuntu-latest
+
     services:
       zookeeper:
         image: confluentinc/cp-zookeeper:7.4.0
@@ -13,26 +29,37 @@ jobs:
         image: confluentinc/cp-kafka:7.4.0
         ports:
           - 9092:9092
-          - 9093:9093
         env:
           KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-          KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092,EXTERNAL://localhost:9093
-          KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,EXTERNAL:PLAINTEXT
-          KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
-        depends_on:
-          zookeeper:
-            condition: service_healthy
+          KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
+          KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+
+      redis:
+        image: redis:latest
+        ports:
+          - 6379:6379
 
     steps:
-      - name: Wait for Kafka
-        run: |
-          docker run --network host confluentinc/cp-kafka:7.4.0 \
-            kafka-topics --bootstrap-server localhost:9092 --list
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-      - name: Create topic
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          distribution: temurin
+          java-version: '17'
+          cache: maven
+
+      - name: Create Kafka topics
         run: |
           docker exec kafka kafka-topics --create \
-            --bootstrap-server kafka:9092 \
+            --bootstrap-server localhost:9092 \
             --topic notifications \
             --partitions 1 \
             --replication-factor 1
+
+      - name: Build with Maven
+        run: mvn clean install
+
+      - name: Run tests
+        run: mvn test
