--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,7 @@
 name: CI Pipeline
 
 env:
-  KAFKA_BOOTSTRAP_SERVERS: kafka:9092
+  KAFKA_BOOTSTRAP_SERVERS: localhost:9092
   REDIS_HOST: redis
   REDIS_PORT: 6379
 
@@ -16,7 +16,6 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
     services:
       zookeeper:
         image: confluentinc/cp-zookeeper:7.4.0
@@ -31,8 +30,12 @@ jobs:
           - 9092:9092
         env:
           KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-          KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
+          KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092,INTERNAL://kafka:9093
+          KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,INTERNAL:PLAINTEXT
           KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+        depends_on:
+          zookeeper:
+            condition: service_healthy
 
       redis:
         image: redis:latest
@@ -50,16 +53,23 @@ jobs:
           java-version: '17'
           cache: maven
 
+      - name: Wait for Kafka
+        run: |
+          for i in {1..10}; do
+            docker exec kafka kafka-broker-api-versions --bootstrap-server kafka:9093 && break
+            sleep 10
+          done
+
       - name: Create Kafka topics
         run: |
           docker exec kafka kafka-topics --create \
-            --bootstrap-server localhost:9092 \
+            --bootstrap-server kafka:9093 \
             --topic notifications \
             --partitions 1 \
             --replication-factor 1
 
       - name: Build with Maven
-        run: mvn clean install
+        run: mvn clean install -DskipTests
 
       - name: Run tests
         run: mvn test
